<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dim_5"
        android:layout_height="match_parent">
       <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_3"
        android:id="@+id/room_type_layout"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:id="@+id/tagline_lable"
            android:textSize="@dimen/font_cart"
            />
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_cart"
            android:id="@+id/tag_edite_value"
            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roomtype"
                    android:id="@+id/roomtype_lable"
                    android:textSize="@dimen/font_cart"
                    />
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:textSize="@dimen/font_cart"
                    android:id="@+id/room_type_spinner"
                   android:entries="@array/rmtypes"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/furnishtype"
                    android:id="@+id/funish_lable"
                    android:textSize="@dimen/font_cart"
                    />
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:textSize="@dimen/font_cart"
                    android:id="@+id/furnish_spinner"
                    android:entries="@array/furnishypes"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/facility_layout"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/facility_lable"
                    android:text="@string/facilityinroom"
                    android:textSize="@dimen/font_cart"
                    />
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                   android:id="@+id/facility_spinner"
                    android:textSize="@dimen/font_cart"
                    android:entries="@array/facilitytype"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foodtype"
                    android:id="@+id/food_lable"
                    android:textSize="@dimen/font_cart"
                    />
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:textSize="@dimen/font_cart"
                    android:id="@+id/food_spinner"
                    android:entries="@array/foodlist"
                    />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_3"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:id="@+id/area_lable"
            android:textSize="@dimen/font_cart"
            />
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_cart"
            android:id="@+id/area_edite_value"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_3"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:id="@+id/rent_lable"
            android:textSize="@dimen/font_cart"
            />
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rent_edit_value"
            android:textSize="@dimen/font_cart"

            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/members_layout"
            android:layout_margin="@dimen/dim_3"
            android:weightSum="2">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/membersperroom"
            android:id="@+id/members_lable"
            android:textSize="@dimen/font_cart"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_40"
            android:textSize="@dimen/font_cart"
            android:id="@+id/membes_spinner"
            android:entries="@array/membersperlist"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacancy"
            android:id="@+id/vacancy_lable"
            android:textSize="@dimen/font_cart"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_40"
            android:textSize="@dimen/font_cart"
            android:id="@+id/vacancy_spinner"
            android:entries="@array/membersperlist"
            />

    </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_3"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/gender_lable"
            android:textSize="@dimen/font_cart"
            />
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_40"
            android:id="@+id/gender_spinner"
            android:textSize="@dimen/font_cart"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_3"
        android:id="@+id/age_layout"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/age_lable"
            android:textSize="@dimen/font_cart"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/minage"
                android:inputType="number"
                android:textSize="@dimen/font_cart"
                android:id="@+id/min_age"/>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/maxage"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/font_cart"
                android:id="@+id/max_age"/>

        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"
                android:id="@+id/phon_lable"
                android:textSize="@dimen/font_cart"
                />
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_edit_valu"
                android:inputType="phone"
                android:maxLength="13"
                android:textSize="@dimen/font_cart"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:text="@string/availability"
                android:id="@+id/availability_lable"
                android:textSize="@dimen/font_cart"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/year_layout"
                android:weightSum="3"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_cart"
                    android:id="@+id/day"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="@dimen/dim_40"
                    android:textSize="@dimen/font_cart"
                    android:id="@+id/month"/>
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="@dimen/dim_40"
                    android:textSize="@dimen/font_cart"
                    android:id="@+id/year"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:id="@+id/country_lable"
                android:textSize="@dimen/font_cart"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40"
                android:textSize="@dimen/font_cart"
                android:id="@+id/country_spinner"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:id="@+id/state_lable"
                android:textSize="@dimen/font_cart"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40"
                android:textSize="@dimen/font_cart"
                android:id="@+id/state_spinner"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/city_lable"
                android:textSize="@dimen/font_cart"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40"
                android:textSize="@dimen/font_cart"
                android:id="@+id/city_spinner"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:id="@+id/location_lable"
                android:textSize="@dimen/font_cart"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_40"
                android:textSize="@dimen/font_cart"
                android:id="@+id/laocation_spinner"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutroom"
                android:textSize="@dimen/font_cart"
                android:id="@+id/about_lable"
                />
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_cart"
                android:id="@+id/about_edit_value"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dim_3"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roomphoto"
                android:textSize="@dimen/font_cart"
                android:id="@+id/photo_upload_lable"
                />
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_cart"

                />

        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_margin="@dimen/dim_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textAllCaps="false"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:background="@color/loginbuttoncolor"
            android:fontFamily="@font/calififont"
            android:textStyle="bold"
            android:textSize="@dimen/regularfont"
            android:text="Save Changes"/>

    </LinearLayout>
</ScrollView>